tests/negative/test_cn_asgn_cn_arr_nest_eval.orb
fnc main () () {
    eval (sym a:(i32 2));
    = ([] a 0) 0;
    = ([] a 1) 1;

    eval (sym (b:((i32 2) cn) a));
    = ([] b 0) 100;
};